# docker-jupyter

./: .gitignore  Dockerfile  README.md  build  hackin  run  stop
files/: bash_aliases.txt  bashrc  bashrc_poetry.txt  bashrc_pyenv.txt  make_env.bash  manage requirements.ipynb  plugin.jupyterlab-settings  register_kernel.bash  requirements_jupyter.txt  requirements_more_viz.txt  requirements_nathan.txt  requirements_pandas.txt  start_jupyter.sh  tracker.jupyterlab-settings
files/jupyter/: make_jupyter_env.bash  pyproject.toml
files/py38a/: pyproject.toml
files/py39a/: pyproject.toml
tests/: python37.ipynb
