[tool.poetry]
name = "py38a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.4"
beautifulsoup4 = "^4.9.3"
openpyxl = "^3.0.7"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
tables = "^3.6.1"
pyarrow = "^4.0.1"
h5py = "^3.2.1"
numpy = "^1.20.3"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
ipykernel = "^5.5.5"
seaborn = "^0.11.1"
plotly = "^4.14.3"
more-itertools = "^8.8.0"
fuzzywuzzy = "^0.18.0"
matplotlib-venn = "^0.11.6"
python-Levenshtein = "^0.12.2"
ipywidgets = "^7.6.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
